renter-chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: db
  namespace: rental

spec:
  replicas: 1

  selector:
    matchLabels:
      app: renter
      component: db

  template:
    metadata:
      labels:
        app: renter
        component: db
    
    spec:
      containers:
        - name: postgres
          image: postgres:18
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
