renter-chart/templates/db-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: rental

spec:
  selector:
    app: renter
    component: db

  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
