renter-chart/templates/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis
  namespace: rental

spec:
  replicas: 1
  selector:
    matchLabels:
      app: renter
      component: redis

  template:
    metadata:
      labels:
        app: renter
        component: redis

    spec:
      containers:
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379



---
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: rental

spec:
  selector:
    app: renter
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
