renter-chart/templates/redis-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis
  namespace: rental

spec:
  selector:
    app: renter
    component: redis
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP
