renter-chart/templates/server-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server
  namespace: rental

spec:
  selector:
    app: renter
    component: server

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
